--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,13 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - welcome/run
+      build:
+        executor:
+          name: node/default
+          tag: "10.4"
+        steps:
+          - checkout
+          - node/with-cache:
+            steps:
+              - run: npm install
+            - run: npm run test
