--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,16 +3,11 @@ version: 2.1
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
-  node: circleci/node@1.1
+  node: circleci/node@4.2.1
 
-jobs:
-  build:
-    executor:
-      name: node/default
-      tag: "10.4"
-    steps:
-      - checkout
-      - node/with-cache:
-        steps:
-          - run: npm install
-        - run: npm run test
+workflows:
+  app-tests:
+      jobs:
+        - node/test
+      
+
